<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smac_planner_node</name>
  <version>0.1.0</version>
  <description>
    Standalone Hybrid-A* planner node. Wraps nav2_smac_planner's templated A*
    (AStarAlgorithm&lt;NodeHybrid&gt;) behind a ComputePathToPose action server,
    building its planning costmap from a traversability PointCloud2 instead of
    the full Nav2 costmap/lifecycle stack.
  </description>
  <maintainer email="herold.adam7@gmail.com">Adam Herold</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
